Closed Bug 1447929 Opened 7 years ago Closed 7 years ago

Fix a few interface/concrete smart pointers in Places

Categories

(Toolkit :: Places, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox61 --- fixed

People

(Reporter: mak, Assigned: mak)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Just a few instances that may use the right Ptr type for interface/concrete that are leftover after the work in bug 1446951.
Comment on attachment 8961305 [details] Bug 1447929 - Fix a few interface/concrete smart pointers in Places. https://reviewboard.mozilla.org/r/230112/#review236066
Attachment #8961305 - Flags: review?(standard8) → review+
Pushed by mak77@bonardo.net: https://hg.mozilla.org/integration/autoland/rev/f8cdb8c06577 Fix a few interface/concrete smart pointers in Places. r=standard8
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: