Bug 1447929 - Fix a few interface/concrete smart pointers in Places. r=standard8

MozReview-Commit-ID: IEoPxZseoyw